--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             <!-- TODO: Set Action and Method Properties -->
 
             <div>
-                <label for="firstname">Your First Name</label>
-                <input type="text" minlength="2" maxlength="35" id="firstname" name="firstname" required>
+                <label for="firstname">Your First Name<span class="required-field">*</span></label>
+                <input type="text" minlength="2" maxlength="35" id="firstname" name="firstname" >
 
                 <!-- TODO: Create a "lastname" input with type "text" -->
                 <!--added min and max length and required fields-->
-                <label for="lastname">Your Last Name</label>
-                <input type="text" minlength="2" maxlength="35" id="lastname" name="lastname" required>
+                <label for="lastname">Your Last Name<span class="required-field">*</span></label>
+                <input type="text" minlength="2" maxlength="35" id="lastname" name="lastname" >
             </div>
             <!-- Adding new field to includ Age-->
             <div>
-                <label for="age">Your Age</label>
+                <label for="age">Your Age<span class="required-field">*</span></label>
                 <input type="number" name="age" id="age" min="21" max="99">
             </div>
             <!-- TODO: Make fieldset and legend -->
@@ -37,13 +37,12 @@
             <!-- Todo: City, State, and Zip Inputs -->
             <fieldset>
                 <legend>Your Contact Info</legend>
-                <label for="email">Your Email</label>
-                <input type="text" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+                <label for="email">Your Email<span class="required-field">*</span></label>
+                <input type="text" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" >
                 <!--included the passcode pattern-->
-                <label for="password">Your Secret Code (must be 6 alphanumeric characters)
-                    <span>"required-field"</span></label>
+                <label for="password">Your Secret Code (must be 6 alphanumeric characters)<span class="required-field"></span></label>
                 <input type="password" id="password" name="password" pattern="[0-9a-zA-Z]{6}"
-                    title="6-Character Alphanumeric Pass Code" required>
+                    title="6-Character Alphanumeric Pass Code" >
 
                 <label for="streetaddress"> Your Street Address</label>
                 <input type="text" id="street-address" name="street-address">
